hphp/test/slow/function_no_param_modifier.php.expectf
Fatal error: Parameters cannot have visibility modifiers (except in parameter lists of constructors). in %s/test/slow/function_no_param_modifier.php on line 6